fixed the footer row wrap issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -560,7 +560,7 @@ body {
 
 .top-footer__social {
   display: flex;
-  flex-flow: row;
+  flex-flow: row wrap;
   justify-content: center;
 }
 
